# Yetka

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-base  Dockerfile-ee  HANDOFF_TR.md  README.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.0.4.md  SECURITY.md  SECURITY_RELEASE_NOTES.md  config_example.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml  release-config.yml
.github/workflows/: build-ansible-executor.yml  build-base-image.yml  build-jms-ansible-ee.yml  build-python-image.yml  check-compilemessages.yml  cleanup-branches.yml  deploy-scripts.yml  discord-release.yml  i18n-auto-translate.yml  issue-close-require.yml  issue-comment.yml  release-installer.yml  security-maintenance.yml
apps/accounts/models/: account.py
apps/accounts/models/automations/: push_account.py
apps/accounts/serializers/automations/: backup.py  change_secret.py
apps/acls/serializers/: base.py
apps/assets/api/asset/: asset.py
apps/assets/serializers/asset/: common.py
apps/authentication/: middleware.py  mixins.py  signal_handlers.py
apps/authentication/api/: connection_token.py
apps/authentication/backends/ukey/: backends.py  forms.py  views.py
apps/authentication/backends/ukey/vendors/ji_da/: sdk_config.yaml
apps/authentication/backends/ukey/vendors/long_mai/: sdk_config.yaml
apps/authentication/models/: connection_token.py
apps/authentication/templates/authentication/: login.html  login_ukey.html
apps/authentication/urls/: api_urls.py
apps/cloud_sync/: README.md  api.py  apps.py  const.py  models.py  serializers.py  sync.py  tasks.py  urls.py
apps/cloud_sync/management/commands/: cloud_sync.py
apps/cloud_sync/migrations/: 0001_initial.py
apps/cloud_sync/providers/: __init__.py  aws.py  azure.py  base.py  mock.py
apps/common/: apps.py  jdmc.py  permissions.py  security_updates.py  tests.py  validators.py
apps/common/api/: __init__.py  jdmc.py  webhook.py
apps/common/const/: choices.py
apps/common/management/commands/: check_api.py
apps/common/management/commands/services/: command.py
apps/common/management/commands/services/services/: __init__.py  celery_mix.py
apps/common/sdk/gm/sctu/: cipher.py  device.py  session_mixin.py
apps/common/sdk/im/slack/: __init__.py
apps/common/serializers/: fields.py
apps/common/urls/: api_urls.py
apps/common/utils/: common.py
apps/common/utils/crypto/: __init__.py
apps/i18n/chen/: tr.json
apps/i18n/core/en/LC_MESSAGES/: django.po
apps/i18n/core/es/LC_MESSAGES/: django.po
apps/i18n/core/ja/LC_MESSAGES/: django.po
apps/i18n/core/ko/LC_MESSAGES/: django.po
apps/i18n/core/pt_BR/LC_MESSAGES/: django.po
apps/i18n/core/ru/LC_MESSAGES/: django.po
apps/i18n/core/tr/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
apps/i18n/core/vi/LC_MESSAGES/: django.po
apps/i18n/core/zh/LC_MESSAGES/: django.po
apps/i18n/core/zh_Hant/LC_MESSAGES/: django.po
apps/i18n/koko/: en.json  es.json  ja.json  ko.json  pt_br.json  ru.json  tr.json  vi.json  zh.json  zh_hant.json
apps/i18n/lina/: en.json  es.json  ja.json  ko.json  pt_br.json  ru.json  tr.json  vi.json  zh.json  zh_hant.json
apps/i18n/lion/: tr.json
apps/i18n/luna/: ru.json  tr.json
apps/jumpserver/: conf.py  const.py  context_processor.py  middleware.py  routing.py  urls.py  vendor.py
apps/jumpserver/api/: __init__.py  maintenance.py
apps/jumpserver/settings/: _xpack.py  auth.py  base.py  custom.py  libs.py
apps/jumpserver/views/: other.py
apps/libs/ansible/: ansible.cfg
apps/notifications/: site_msg.py  ws.py
apps/notifications/models/: site_msg.py
apps/ops/: tasks.py
apps/ops/ansible/: docker.py  runner.py
apps/ops/templates/ops/: celery_task_log.html
apps/settings/: models.py
apps/settings/api/: public.py
apps/settings/serializers/: public.py
apps/settings/serializers/auth/: cert.py  ldap.py  ldap_ha.py  ukey.py
apps/settings/utils/: ldap.py
apps/static/js/: session-encrypt.js  yetka-maintenance-alert.js  yetka-ui-policy.js
apps/templates/: _base_only_content.html
apps/terminal/automations/deploy_applet_host/: playbook.yml
apps/terminal/serializers/: applet_host.py
apps/tickets/views/: approve.py
apps/users/: filters.py  signal_handlers.py  utils.py
apps/users/api/: user.py
apps/users/forms/: profile.py
apps/users/migrations/: 0006_user_ukey_sn.py
apps/users/models/user/: __init__.py  _auth.py  _source.py
apps/users/serializers/: profile.py  user.py
deploy/: MAINTENANCE.md  README.md  check-install.sh  install-baremetal.sh  yetka-update-request-runner.sh  yetka-update.sh  yetka.env.example
deploy/ha/application/: haproxy.cfg.example  keepalived.conf.example
deploy/ha/postgresql/: etcd.env.example  haproxy-postgresql.cfg.example  install-etcd-node.sh  install-patroni-node.sh  patroni.env.example
tools/: enable_yetka_risk_detection.py  inject_yetka_maintenance_alert.py
tools/tests/: test_enable_yetka_risk_detection.py
utils/ansible_executor/: bindep.txt  build.sh  execution-environment.yml  requirements-python.txt
