[project]
name = "jumpserver"
version = "v4.0"
description = "Most popular open source bastion host"
authors = [{ name = "ibuler", email = "ibuler@qq.com" }]
requires-python = ">=3.14"
dependencies = [
    'aiofiles==25.1.0',
    'amqp==5.3.1',
    'ansible-core',
    'ansible==9.13.0',
    'ansible-runner',
    'asn1crypto==1.5.1',
    'bcrypt==5.0.0',
    'billiard==4.2.4',
    'chardet==7.4.3',
    'configparser==7.2.0',
    'cryptography==48.0.1',
    'decorator==5.3.1',
    'docutils==0.23',
    'ecdsa==0.19.2',
    'enum-compat==0.0.3',
    'ephem==4.2.1',
    'future==1.0.0',
    'itypes==1.2.0',
    'jinja2==3.1.6',
    'markupsafe==3.0.3',
    'olefile==0.47',
    'paramiko==5.0.0',
    'passlib==1.7.4',
    'pyasn1==0.6.4',
    'pycparser==3.0',
    'pycryptodome==3.23.0',
    'pycryptodomex==3.23.0',
    'phonenumbers==9.0.34',
    'gmssl==3.2.2',
    'itsdangerous==2.2.0',
    'pyotp==2.10.0',
    'pynacl==1.6.2',
    'python-dateutil==2.9.0.post0',
    'pyyaml==6.0.3',
    'requests==2.34.2',
    'simplejson==4.1.1',
    'six==1.17.0',
    'sshtunnel==0.4.0',
    'sshpubkeys==3.3.1',
    'urllib3==2.7.0',
    'uritemplate==4.2.0',
    'vine==5.1.0',
    'werkzeug==3.1.8',
    'unicodecsv==0.14.1',
    'treelib==1.8.0',
    'psutil==7.2.2',
    'msrestazure==0.6.4.post1',
    'adal==1.2.7',
    'openpyxl==3.1.5',
    'pyexcel==0.7.6',
    'pyexcel-xlsx==0.6.1',
    'data-tree==0.0.1',
    'pyvmomi==9.1.0.0',
    'termcolor==3.3.0',
    'pyzipper==0.4.0',
    'python3-saml==1.16.0',
    'websocket-client==1.9.0',
    'pyjwkest==1.4.4',
    'jsonfield2==4.0.0.post0',
    'geoip2==5.3.0',
    'ipip-ipdb==1.6.1',
    'pywinrm==0.5.0',
    'django==5.2.16',
    'django-bootstrap3==26.1',
    'django-filter==26.1',
    'django-formtools==2.7',
    'django-ranged-response==0.2.0',
    'django-simple-captcha==0.6.3',
    'django-timezone-field==7.2.2',
    'djangorestframework==3.17.1',
    'djangorestframework-bulk==0.2.1',
    'django-simple-history==3.12.0',
    'django-private-storage==3.1.3',
    'drf-nested-routers==0.95.0',
    'drf-writable-nested==0.7.2',
    'rest-condition==1.0.3',
    'drf-spectacular==0.30.0',
    'pillow==12.3.0',
    'pytz==2026.2',
    'django-proxy==1.3.0',
    'python-daemon==3.1.2',
    'eventlet==0.41.1',
    'greenlet==3.2.4',
    'gunicorn==26.0.0',
    'celery==5.6.3',
    'flower==2.0.1',
    'django-celery-beat==2.9.0',
    'kombu==5.6.2',
    'uvicorn==0.51.0',
    'websockets==16.1.1',
    'python-ldap==3.4.7',
    'ldap3==2.9.1',
    'django-radius',
    'django-cas-ng',
    'python-cas==1.7.2',
    'django-auth-ldap==5.3.0',
    'mysqlclient==2.2.8',
    'pymssql==2.3.13',
    'django-redis==7.0.0',
    'python-redis-lock==4.0.1',
    'pyopenssl==26.2.0',
    'redis',
    'pymongo==4.17.0',
    'pyfreerdp==0.0.4',
    'hvac==2.4.0',
    'pyhcl==0.4.5',
    'ipy==1.1',
    'netifaces>=00.11.0',
    'channels>=04.0.0',
    'channels-redis==4.3.0',
    'fido2>=2.2.1',
    'ua-parser>=00.18.0',
    'user-agents>=02.2.0',
    'django-cors-headers>=04.3.0',
    'mistune==3.3.3',
    'openai>=2.46.0',
    'xlsxwriter>=03.1.9',
    'exchangelib>=05.1.0',
    'lxml==6.1.1',
    'pydantic>=2.13.4',
    'annotated-types>=00.6.0',
    'httpx>=00.27.0',
    'distro==1.9.0',
    'tqdm==4.69.0',
    'elasticsearch7==7.17.13',
    'elasticsearch8==8.19.3',
    'polib>=01.2.0',
    'azure-identity==1.25.3',
    'azure-keyvault-secrets==4.11.0',
    "psycopg2-binary==2.9.12",
    'pycountry>=024.6.1',
    'premailer==3.10.0',
    'azure-storage-blob==12.30.0',
    'esdk-obs-python==3.26.6',
    'oss2==2.19.1',
    'aliyun-python-sdk-core==2.16.0',
    'boto3==1.42.93',
    'botocore==1.42.93',
    's3transfer==0.16.0',
    'xmlsec==1.3.17',
    'pdf2image==1.17.0',
    'drf-spectacular-sidecar==2026.7.1',
    "django-oauth-toolkit==3.3.0",
    "pyhttpsig==1.3.0",
    "telnetlib3==4.0.5",
    "defusedxml>=0.7.1",
    "ansible-builder>=3.1.1",
    "markdownify>=1.2.3",
]

[project.urls]
Homepage = "https://www.jumpserver.com"
Documentation = "https://www.jumpserver.com/docs"

[tool.uv]
default-groups = ["xpack", "dev"]


[dependency-groups]

dev = [
    'ipython==9.15.0',
    'daphne==4.2.2',
    'django-debug-toolbar==7.0.0',
    'pympler==1.1',
    'forgerypy3==0.3.1',
]

xpack = [
    "requests-unixsocket==0.4.1",
    'qingcloud-sdk==1.2.16',
    'azure-mgmt-subscription==3.1.1',
    'azure-mgmt-compute==38.2.0',
    'azure-mgmt-network==31.0.1',
    'google-cloud-compute==1.50.0',
    'alibabacloud-dysmsapi20170525==2.0.24',
    'python-novaclient==18.13.0',
    'python-keystoneclient==5.8.0',
    'bce-python-sdk==0.9.72',
    'tencentcloud-sdk-python==3.1.136',
    'aliyun-python-sdk-core==2.16.0',
    'aliyun-python-sdk-ecs==4.24.83',
    'keystoneauth1==5.15.0',
    'oracledb==4.0.2',
    'protobuf>=7.35.1', 
    'ucloud-sdk-python3==0.11.107',
    'huaweicloudsdkecs==3.1.52',
    'huaweicloudsdkcore==3.1.52',
    'volcengine-python-sdk==5.0.41',
    'aliyun-python-sdk-rds==2.7.53',
    "django-vastbase-backend==0.1.2",
]

[tool.uv.sources]
ansible-core = { url = "https://github.com/jumpserver-dev/ansible/archive/refs/tags/v2.16.18.3.zip" }
ansible-runner = { url = "https://github.com/jumpserver-dev/ansible-runner/archive/refs/tags/v2.4.0.2.zip" }
django-cas-ng = { url = "https://github.com/ibuler/django-cas-ng/releases/download/v4.3.2/django-cas-ng-4.3.2.zip" }
django-radius = { url = "https://github.com/ibuler/django-radius/archive/refs/tags/1.5.0.zip" }
redis = { url = "https://github.com/jumpserver-dev/redis-py/archive/refs/tags/v5.0.3.zip" }
